# python-kokai-data

./: 01-sakura.ipynb  02-typhoon.ipynb  main.py  pyproject.toml
