[project]
name = "python-kokai-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
]
